--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,23 +29,36 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Set up Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: 'npm'
+      - name: List files before install
+        run: ls -la
       - name: Install dependencies
-        run: npm install
+        run: npm ci || npm install
+      - name: Show environment info
+        run: |
+          npm -v
+          node -v
+          npm list vite
       - name: Build
         run: npm run build
+      - name: List files after build
+        run: |
+          echo "Contents of current directory:"
+          ls -la
+          echo "Contents of dist directory:"
+          ls -la dist || echo "dist directory not found"
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v4
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v2
         with:
           # Upload dist repository
           path: './dist'
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v3
