--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,14 +51,13 @@ jobs:
           echo "Contents of current directory:"
           ls -la
           echo "Contents of dist directory:"
-          ls -la dist || echo "dist directory not found"
-      - name: Setup Pages
+          ls -la dist || echo "dist directory not found"      - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
           # Upload dist repository
           path: './dist'
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v3
+        uses: actions/deploy-pages@v4
