--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
-  "scripts": {
+  "type": "module",  "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:vercel": "npm ci && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
