--- a/package.json
+++ b/package.json
@@ -3,18 +3,13 @@
   "homepage": "https://himanshusingh9647.github.io/Portfolio/",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
-  "scripts": {
+  "type": "module",  "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predploy": "npm run build",
-    "deploy": "gh-pages -d dist"
-  },
-  "dependencies": {
+    "preview": "vite preview"
+  },  "dependencies": {
     "framer-motion": "^12.18.1",
-    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
