Complete portfolio enhancement: Docker setup, email integration, and mobile improvements
 Docker Configuration:
- Added production Dockerfile with Nginx
- Created development Dockerfile with hot reloading
- Implemented docker-compose.yml for multi-environment setup
- Added helper scripts (docker.sh, docker.bat)
- Configured nginx.conf with optimization and security headers
- Created comprehensive Docker setup documentation

 Email Integration:
- Integrated EmailJS for contact form functionality
- Added email configuration file for easy management
- Created detailed EmailJS setup guide
- Implemented proper error handling and user feedback

 Bug Fixes & Improvements:
- Fixed terminal animation in Contact section (no more garbled text)
- Improved dark mode toggle with localStorage persistence
- Enhanced mobile navigation with smooth scrolling
- Made project images responsive for mobile devices
- Updated favicon to rocket SVG theme

 Contact Section Redesign:
- Created developer-themed terminal interface
- Added VS Code-style contact form
- Implemented syntax highlighting and code comments
- Added fun developer quotes and animations

 Performance & Security:
- Optimized for GitHub Pages deployment
- Added security headers in nginx configuration
- Implemented gzip compression and static asset caching
- Enhanced SEO with proper meta tags

 Mobile Enhancements:
- Responsive project image display
- Improved navigation UX
- Better touch interactions
- Optimized layouts for mobile devices

--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "homepage": "https://himanshusingh9647.github.io/Portfolio/",
   "private": true,
   "version": "0.0.0",
-  "type": "module",  "scripts": {
+  "type": "module",
+  "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
-  },  "dependencies": {
+  },
+  "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "framer-motion": "^12.18.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
